Làm phần Project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,28 +41,32 @@ a {
 
 .btn:hover {
     cursor: pointer;
-    opacity: 0.9;
+    background-color: #78e4b0;
+    transition: background-color 0.3s linear;
 }
 
 .line-clamp {
     display: -webkit-box;
-    -webkit-line-clamp: var(--line,3);
+    -webkit-line-clamp: var(--line, 3);
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
 
 .line-clamp-1 {
-   --line: 1;
+    --line: 1;
 }
 
 .line-clamp-2 {
     --line: 2;
- }
- 
+}
 
 /* --- Header ---  */
 .header {
     background: #fbfaff;
+}
+
+.heder__container {
+    min-width: 1330px;
 }
 
 .header .menu {
@@ -316,10 +320,6 @@ a {
     background-color: var(--primary-bg);
 }
 
-.specialities__container {
-    width: 1170px;
-}
-
 .specialities__sub-heading {
     text-align: center;
     color: var(--primary-heading);
@@ -359,8 +359,8 @@ a {
     object-fit: cover;
 }
 
-.specialities__icon:hover  {
-   cursor: pointer;
+.specialities__icon:hover {
+    cursor: pointer;
 }
 
 .specialities__icon img {
@@ -405,6 +405,109 @@ a {
     line-height: 1.66;
 }
 
-.line-clamp {
+/* === Project === */
+.project {
+    background: #5d3bee;
+    margin-top: 90px;
+    padding: 86px 0;
+}
 
+.project__head {
+    display: flex;
+}
+
+.project__sub-heading {
+    max-width: 468px;
+    color: #fff;
+    font-size: 5.6rem;
+    font-weight: 500;
+    line-height: 1.18;
+    letter-spacing: -2.24px;
+}
+
+.project__desc {
+    margin-left: 160px;
+    opacity: 0.7;
+    margin-top: 30px;
+    color: #fff;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.66;
+    max-width: 370px;
+}
+
+.row-list {
+    margin-top: 70px;
+}
+
+.project__item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    background: #fbfaff;
+    padding: 24px;
+    margin-bottom: 30px;
+}
+
+.project__item:hover {
+    transform: translateY(-10px);
+    box-shadow: 2px 2px 10px #ccc;
+    border-radius: 20px;
+    transition: all 0.3s linear;
+}
+
+.project__item-content {
+    margin-right: auto;
+}
+.project__item-heading {
+    color: var(#080415);
+    font-size: 3.2rem;
+    font-weight: 500;
+    line-height: 1.25;
+    letter-spacing: -1.28px;
+}
+
+.project__item-desc {
+    margin-top: 10px;
+    color: var(--primary-color);
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.43;
+}
+
+.project__item-link {
+    display: block;
+    margin-top: 20px;
+    color: var(--primary-heading);
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 1.67;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: none;
+    text-decoration-thickness: auto;
+    text-underline-offset: auto;
+    text-underline-position: from-font;
+}
+
+.project__item-img {
+    position: relative;
+    z-index: 1;
+    width: 246px;
+    height: 187px;
+    object-fit: cover;
+}
+
+.project-diagonal {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.project__btn {
+    margin: 60px auto 0;
+    background-color: #fff;
+    color: var(--primary-heading);
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 1.67;
 }
