--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: "DM Sans", sans-serif;
 }
 
 /* --- Common ---*/
@@ -503,6 +502,7 @@ a {
     right: 0;
     bottom: 0;
 }
+
 .project__btn {
     margin: 60px auto 0;
     background-color: #fff;
@@ -510,4 +510,111 @@ a {
     font-size: 1.8rem;
     font-weight: 700;
     line-height: 1.67;
+}
+
+/* === About === */
+.about {
+    padding: 40px 0;
+    margin-top: 100px;
+}
+
+.about__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    color: #5d3bee;
+    font-size: 3.2rem;
+    font-weight: 500;
+    letter-spacing: -1.28px;
+}
+
+.about__sub-heading {
+    margin-top: 10px;
+    text-align: center;
+    color: var(--primary-heading);
+    font-size: 5.6rem;
+    font-weight: 500;
+    letter-spacing: -2.24px;
+}
+
+.about__desc {
+    margin: 15px auto 0;
+    max-width: 49%;
+    color: var(--primary-color);
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67;
+    margin-bottom: 70px;
+}
+
+.about__separation {
+    margin: 0 auto;
+    display: block;
+    width: 80%;
+    height: 1px;
+    background: #080415;
+    opacity: 0.2;
+}
+
+.about__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 20px 0;
+}
+.about__statistical {
+    color: var(--primary-heading);
+    font-size: 5.6rem;
+    font-weight: 500;
+    line-height: 1.36;
+    letter-spacing: 1.68px;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: none;
+    text-decoration-thickness: auto;
+    text-underline-offset: auto;
+    text-underline-position: from-font;
+}
+
+.about__item-desc {
+    color: var(--primary-color);
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67;
+}
+
+.about__video {
+    position: relative;
+    margin-top: 70px;
+}
+
+.about__play {
+    background: transparent;
+    outline: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: none;
+}
+
+.about__play:hover {
+    cursor: pointer;
+}
+
+.about__img {
+    max-width: 100%;
+    object-fit: cover;
+}
+
+.about__intro {
+    position: absolute;
+    right: 25px;
+    bottom: 10px;
+    color: var(--primary-color);
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: var(--primary-bg);
 }
