--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -887,3 +887,70 @@ a {
     height: 529px;
     object-fit: cover;
 }
+
+/* Contact */
+.contact .container {
+    max-width: 1330px;
+    background-color: #fbfaff;
+}
+
+.contact__inner {   
+    position: relative;
+    padding: 68px 0;
+    text-align: center;
+}
+
+.contact__icon {
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+}
+
+.contact__content {
+    position: relative;
+      z-index: 1;
+    max-width: 570px;
+    margin: 20px auto 0;
+}
+
+.contact__sub-heading {
+    color: var(--primary-heading);
+    font-size: 5.6rem;
+    font-weight: 500;
+    line-height: 1.18;
+    letter-spacing: -2.24px;
+}
+
+.contact__desc {
+    margin-top: 20px;
+    color: var(--primary-color);
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67;
+}
+
+.contact__btn {
+    margin: 30px auto 0;
+}
+
+.contact__decorate {
+    position: absolute;
+  
+}
+
+.contact__decorate-1 {
+    left: -15px;
+    bottom: 0;
+}
+
+.contact__decorate-2 {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.contact__decorate-3 {
+    top: 0;
+    right: -15px;
+}
