--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1005,3 +1005,8 @@ a {
 .footer__menu li:last-child > .footer__menu--link {
     border-right: none;
 }
+
+.heading {
+    animation: bounce; 
+  animation-duration: 2s; /
+}
