--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,8 @@ a {
 }
 
 .dots {
+    position: relative;
+    z-index: 1;
     margin-top: 40px;
     display: flex;
     align-items: center;
@@ -97,14 +99,20 @@ a {
 
 /* --- Header ---  */
 .header {
+    position: sticky;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    right: 0;
     background: #fbfaff;
+    box-shadow: 2px 2px 10px #d3cfe3;
 }
 
 .heder__container {
-    min-width: 1330px;
+    width: 1330px;
 }
 
-.menu {
+.header .menu {
     display: flex;
     align-items: center;
 }
@@ -210,13 +218,14 @@ a {
     z-index: 1;
 }
 
-.media--diagonal-line {
+.media--decorate {
     position: absolute;
     right: -156px;
     top: -80px;
 }
 
 .hero__content {
+    position: relative;
     margin-left: 156px;
     margin-top: 137px;
 }
@@ -256,6 +265,8 @@ a {
 
 .hero__content-footer {
     margin-top: 109px;
+    position: relative;
+    z-index: 1;
 }
 
 .hero__content-text {
@@ -302,7 +313,7 @@ a {
 
 .hero__diagonal {
     position: absolute;
-    right: calc((100vw - 1330px) / 2 - 80px);
+    right: -25px;
     bottom: 0;
 }
 
@@ -378,7 +389,6 @@ a {
 }
 
 .specialities__item {
-    width: 370px;
     padding: 32px 42px;
     background: #fbfaff;
 }
@@ -495,7 +505,7 @@ a {
     margin-right: auto;
 }
 .project__item-heading {
-    color: var(#080415);
+    color: var(--primary-heading);
     font-size: 3.2rem;
     font-weight: 500;
     line-height: 1.25;
@@ -525,11 +535,17 @@ a {
     text-underline-position: from-font;
 }
 
+.project__item-right {
+    width: 246px;
+    height: 187px;
+    overflow: hidden;
+}
+
 .project__item-img {
     position: relative;
     z-index: 1;
-    width: 246px;
-    height: 187px;
+    width: inherit;
+    height: inherit;
     object-fit: cover;
 }
 
@@ -770,7 +786,7 @@ a {
 }
 
 .question__sub-heading {
-    max-width: 48%;
+    max-width: 575px;
     color: var(--primary-heading);
     font-size: 5.6rem;
     font-weight: 500;
@@ -883,7 +899,7 @@ a {
 }
 
 .feature__img {
-    width: 370px;
+    max-width: 100%;
     height: 529px;
     object-fit: cover;
 }
@@ -955,17 +971,20 @@ a {
 }
 
 /* === Footer === */
-.footer {   
+.footer {
     margin: 50px 0 20px;
     padding: 10px 0;
     background-color: var(--primary-bg);
 }
 
 .footer__container {
-    max-width: 1430px;
+    width: 1430px;
 }
 
 .footer .menu {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
     max-width: 1330px;
     margin: 0 auto;
 }
@@ -979,7 +998,10 @@ a {
 
 .footer__info {
     display: flex;
+    gap: 16px;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     margin: 18px 130px 0;
 }
 
@@ -1004,9 +1026,4 @@ a {
 
 .footer__menu li:last-child > .footer__menu--link {
     border-right: none;
-}
-
-.heading {
-    animation: bounce; 
-  animation-duration: 2s; /
 }
